# kansas-lava-cores

./: .gitignore  LICENSE  README  kansas-lava-cores.cabal  stack.yaml
Hardware/KansasLava/: Chunker.hs  Core.hs  FIFO.hs  Form.hs  LCD.hs  Peripherals.hs  RS232.hs  Random.hs  Rate.hs  Simulator.hs  Text.hs  VGA.hs
Hardware/KansasLava/Boards/: Physical.hs  Spartan3e.hs  UCF.hs
Hardware/KansasLava/LCD/: ST7066U.hs
Hardware/KansasLava/Simulator/: ANSI.hs  Device.hs  Stream.hs
Hardware/KansasLava/Simulators/: Fabric.hs  Polyester.hs  Spartan3e.hs
Hardware/KansasLava/Spartan3e/: LCD.hs
UCF/: Spartan3e.ucf
examples/Genesys/: Main.hs
examples/Spartan3e/: Main.hs  Makefile
tests/: Chunker.hs  FIFO.hs  LCD.hs  Main.hs  Makefile  RS232.hs  Rate.hs
tests/Rate/: Main.hs
