Name:               kansas-lava-cores
Version:            0.1.0.20110510
Synopsis:           IP Cores Written in Kansas Lava, including testing frameworks.
Category:            Hardware
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill
Maintainer:          Andy Gill <andygill@ku.edu>
Copyright:           (c) 2011 The University of Kansas
Homepage:            http://ittc.ku.edu/~andygill/kansas-lava.php
Stability:	     alpha
build-type: 	     Simple
Cabal-Version:       >= 1.6

Flag unit
  Description: Enable unit tests for every core
  Default:     True

Library
  Build-Depends: base >= 4, 
--                kansas-lava == 0.2.1.20100623, 
                sized-types == 0.3.1.20110426
  Exposed-modules:
        Hardware.KansasLava.FIFO
        Hardware.KansasLava.Random
        Hardware.KansasLava.Rate
        Hardware.KansasLava.RS232
        Hardware.KansasLava.Chunker

        Hardware.KansasLava.Spartan3e.LCD

  Hs-Source-Dirs: ., ../kansas-lava
  Other-modules:


Executable kansas-lava-cores-tests
    if flag(unit)
      Build-Depends: base >= 4, 
--      kansas-lava == 0.2.1.20100623, 
        sized-types == 0.3.1.20110426, data-default,
                 containers, data-reify == 0.6, pretty,
                 dotgen  >= 0.4.1, array, template-haskell, sized-types == 0.3.1.20110426,
                 directory, random, netlist==0.3, netlist-to-vhdl==0.3, process,
                 fgl, filepath, data-default, unix, bytestring, mtl, strict
      buildable: True
      Other-modules:
    else
      Build-depends: base
      buildable: False
    Main-Is:        Main.hs
    Hs-Source-Dirs: ., tests, ../kansas-lava
--    Ghc-Options: -Wall  -Werror 
--                 -fno-warn-orphans -fcontext-stack=256

