Name:               kansas-lava-cores
Version:            0.1.1.0
Synopsis:           IP Cores Written in Kansas Lava, including testing frameworks.
Category:            Hardware
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill
Maintainer:          Andy Gill <andygill@ku.edu>
Copyright:           (c) 2011 The University of Kansas
Homepage:            http://ittc.ku.edu/~andygill/kansas-lava.php
Stability:	     alpha
build-type: 	     Simple
Cabal-Version:       >= 1.6

Flag unit
  Description: Enable unit tests for every core
  Default:     True

Library
  Build-Depends: base >= 4, 
                kansas-lava == 0.2.3.0,
                sized-types == 0.3.2.20110831,
                ansi-terminal >= 0.5.5
  Exposed-modules:
        Hardware.KansasLava.FIFO
        Hardware.KansasLava.Random
        Hardware.KansasLava.Rate
        Hardware.KansasLava.RS232
        Hardware.KansasLava.Chunker

        Hardware.KansasLava.LCD.ST7066U
        Hardware.KansasLava.Boards.Spartan3e
        Hardware.KansasLava.Simulators.Spartan3e
        Hardware.KansasLava.Simulators.Fabric

--  Hs-Source-Dirs: ., ../kansas-lava
  Other-modules:
  Ghc-Options: -fcontext-stack=100

Executable kansas-lava-cores-tests
    if flag(unit)
      Build-Depends: base >= 4, 
        kansas-lava == 0.2.3.0,
        sized-types == 0.3.2.20110831, data-default,
                 containers, data-reify == 0.6, pretty,
                 dotgen  >= 0.4.1, array, template-haskell,
                 directory, random, netlist==0.3, netlist-to-vhdl==0.3, process,
                 fgl, filepath, data-default, unix, bytestring, mtl, strict, cmdargs
      buildable: True
      Other-modules:
    else
      Build-depends: base
      buildable: False
    Main-Is:        Main.hs
    Hs-Source-Dirs: ., tests
    Ghc-Options: -fcontext-stack=100
          -threaded -rtsopts
--        -Wall  -Werror 
                        
