Name:               kansas-lava-cores
Version:            0.1.2
Synopsis:           FPGA Cores Written in Kansas Lava.
Description:
         Kansas Lava Cores is a collection of libraries, written in Kansas Lava,
         that describe specific hardware components, as well as a Spartan3e 
         board monad and simulator, and testing framework.
         
Category:            Hardware
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill
Maintainer:          Andy Gill <andygill@ku.edu>
Copyright:           (c) 2011 The University of Kansas
Homepage:            http://ittc.ku.edu/~andygill/kansas-lava.php
Stability:	     alpha
build-type: 	     Simple
Cabal-Version:       >= 1.6
Data-files: 
   UCF/*.ucf
extra-source-files:   
   tests/Makefile
   README

Flag all
  Description: Enable full development tree
  Default:     False

Flag unit
  Description: Enable unit tests for every core
  Default:     True

Flag spartan3e
  Description: Enable demo spartan3 program
  Default:     True

Library
  Build-Depends: base >= 4, 
                kansas-lava == 0.2.4,
                sized-types >= 0.3.4,
                ansi-terminal >= 0.5.5
  Exposed-modules:
        Hardware.KansasLava.FIFO
        Hardware.KansasLava.Random
        Hardware.KansasLava.Rate
        Hardware.KansasLava.RS232
        Hardware.KansasLava.Chunker
        Hardware.KansasLava.Text

        Hardware.KansasLava.LCD.ST7066U
        Hardware.KansasLava.Boards.UCF
        Hardware.KansasLava.Boards.Spartan3e
        Hardware.KansasLava.Simulators.Spartan3e
        Hardware.KansasLava.Simulators.Polyester
  Other-modules:
        Paths_kansas_lava_cores

--  Hs-Source-Dirs: ., ../kansas-lava
  Other-modules:
  Ghc-Options: -fcontext-stack=100

Executable spartan3e-demo
    if flag(spartan3e) || flag(all)
      Build-Depends: base >= 4,
        kansas-lava == 0.2.4,
        sized-types >= 0.3.4,
        data-default
      buildable: True
   else
      Build-depends: base
      buildable: False
   Main-Is: Main.hs
   Hs-Source-Dirs: ., examples/Spartan3e
   Ghc-Options: -fcontext-stack=100
          -threaded -rtsopts

Executable kansas-lava-cores-tests
    if flag(unit) || flag(all)
      Build-Depends: 
        base >= 4, 
        kansas-lava == 0.2.4,
        sized-types >= 0.3.4,
        data-default, containers, data-reify == 0.6, pretty,
        dotgen  >= 0.4.1, array, template-haskell,
        directory, random, process,
        fgl, filepath, data-default, unix, bytestring, mtl, strict, cmdargs,
        network
      buildable: True
      Other-modules:
         Chunker
         FIFO
         LCD
         Main
         RS232
         Rate
    else
      Build-depends: base
      buildable: False
    Main-Is:        Main.hs
    Hs-Source-Dirs: ., tests
    Ghc-Options: -fcontext-stack=100
          -threaded -rtsopts
--        -Wall  -Werror 
                        

source-repository head
  type:     git
  location: git://github.com/ku-fpg/kansas-lava-cores.git
